test/success/integration/_succ_expr_relge_2.hs
x :: Bool
x = 3.0 >= 4.0
main = print "hello"