test/fail/integration/_fail_grammar_expr_relge_2.hs
x :: Bool
x = 3 >= jl
main = print "hello"